# haskell-text-and-plots

./: .stylish-haskell.yaml  CHANGELOG  LICENSE  Makefile  README.md  text-and-plots.cabal
examples/: bar-chart.hs  monthly-rainfall.hs  simple.hs
src/Text/: DocL.hs
src/Text/DocL/: Javascript.hs
