name:                text-and-plots
version:             0.1.0.0
synopsis:
  EDSL to create documents with plots based on the C3.js library.
description:
  Haskell mini-language to create HTML documents with a mixture of markup and
  plots based on the <http://c3js.org/ C3.js> library. See the
  <https://github.com/andersjel/haskell-text-and-plots github page> for an
  introduction.
website:             https://github.com/andersjel/haskell-text-and-plots
license:             MIT
license-file:        LICENSE
author:              Anders Jellinggaard
maintainer:          anders.jel@gmail.com
copyright:           (c) 2015 Anders Jellinggaard
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Text.DocL
  build-depends:
    aeson                ==0.8.*,
    base                 ==4.7.*,
    blaze-html           ==0.7.*,
    bytestring           ==0.10.*,
    containers           ==0.5.*,
    markdown             ==0.1.*,
    unordered-containers ==0.2.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings
    GeneralizedNewtypeDeriving
